--- a/src/pages/log-in.html
+++ b/src/pages/log-in.html
@@ -110,9 +110,19 @@
                     <a href="personal-area.html" class="first-row__personal-area">Личный кабинет</a>
                 </div>
                 <div class="header__row header__row--second">
+                    <button class="second-row__burger-btn">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <p class="visually-hidden">Открыть бургер меню</p>
+                    </button>
                     <a href="index.html" class="second-row__main-link">
-                        <img src="./assets/img/main-logo.svg" alt="Логотип бьюти мед групп." class="main-link__logo"
-                            width="261" height="42">
+                        <picture>
+                            <source src="./assets/img/main-logo.svg" alt="Логотип бьюти мед групп." class="main-link__logo"
+                            width="261" height="42" media="(min-width: 760px)">
+                            <img src="./assets/img/main-logo.svg" alt="Логотип бьюти мед групп." class="main-link__logo"
+                            width="149" height="24">
+                           </picture>
                     </a>
                     <div class="second-row__address">
                         Москва, ул. Прянишникова, д. 23А
@@ -612,7 +622,7 @@
         </div>
         <div class="modal__substrate"></div>
     </div>
-    <script>
+    <!-- <script>
                 const createModal = (triggersSelector, modalSelector, closeSelector) => {
             document.querySelectorAll(triggersSelector).forEach(trigger => {
                 trigger.addEventListener('click', (evt) => {
@@ -640,7 +650,7 @@
         document.querySelector('.modal-city').addEventListener('mouseleave', () => {
             document.querySelector('.modal-city').style.display = 'none';
         });
-    </script>
+    </script> -->
     <div class="decorative decorative__right decorative__right--favorites"></div>
     <div class="decorative decorative__left decorative__left--favorites"></div>
     <div class="decorative decorative__right decorative__right--bottom"></div>
