--- a/src/pages/personal-area.html
+++ b/src/pages/personal-area.html
@@ -110,9 +110,19 @@
                     <a class="first-row__personal-area">Личный кабинет</a>
                 </div>
                 <div class="header__row header__row--second">
+                    <button class="second-row__burger-btn">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <p class="visually-hidden">Открыть бургер меню</p>
+                    </button>
                     <a href="index.html" class="second-row__main-link">
-                        <img src="./assets/img/main-logo.svg" alt="Логотип бьюти мед групп." class="main-link__logo"
-                            width="261" height="42">
+                        <picture>
+                            <source src="./assets/img/main-logo.svg" alt="Логотип бьюти мед групп." class="main-link__logo"
+                            width="261" height="42" media="(min-width: 760px)">
+                            <img src="./assets/img/main-logo.svg" alt="Логотип бьюти мед групп." class="main-link__logo"
+                            width="149" height="24">
+                           </picture>
                     </a>
                     <div class="second-row__address">
                         Москва, ул. Прянишникова, д. 23А
@@ -1015,23 +1025,23 @@
     <div class="decorative decorative__left decorative__left--pa"></div>
     <div class="decorative decorative__right decorative__right--bottom"></div>
     <script>
-        const createModal = (triggersSelector, modalSelector, closeSelector) => {
-            document.querySelectorAll(triggersSelector).forEach(trigger => {
-                trigger.addEventListener('click', (evt) => {
-                    evt.preventDefault();
-                    document.querySelector(modalSelector).style.display = 'flex';
-                });
-            });
+        // const createModal = (triggersSelector, modalSelector, closeSelector) => {
+        //     document.querySelectorAll(triggersSelector).forEach(trigger => {
+        //         trigger.addEventListener('click', (evt) => {
+        //             evt.preventDefault();
+        //             document.querySelector(modalSelector).style.display = 'flex';
+        //         });
+        //     });
 
-            document.querySelector(closeSelector).addEventListener('click', () => {
-                document.querySelector(modalSelector).style.display = 'none';
-            });
-        };
+        //     document.querySelector(closeSelector).addEventListener('click', () => {
+        //         document.querySelector(modalSelector).style.display = 'none';
+        //     });
+        // };
 
-        createModal('#data-change', '.modal--personal-data', '.modal--personal-data .modal__close');
-        createModal('#delivery-change', '.modal--delivery', '.modal--delivery .modal__close');
-        createModal('#phone-change', '.modal--phone', '.modal--phone .modal__close');
-        createModal('#password-change', '.modal--password', '.modal--password .modal__close');
+        // createModal('#data-change', '.modal--personal-data', '.modal--personal-data .modal__close');
+        // createModal('#delivery-change', '.modal--delivery', '.modal--delivery .modal__close');
+        // createModal('#phone-change', '.modal--phone', '.modal--phone .modal__close');
+        // createModal('#password-change', '.modal--password', '.modal--password .modal__close');
 
 
         const personalArea = document.querySelector('.pa-tabs__item[data-value="personal-area"');
@@ -1065,19 +1075,19 @@
         delivery.addEventListener('click', () => {
             showCurrentTab(delivery.getAttribute('data-value'))
         });
-        document.querySelector('.second-row__search-wrapper').addEventListener('mouseenter', () => {
-            document.querySelector('.modal-search').style.display = 'block';
-        });
-        document.querySelector('.modal-search').addEventListener('mouseleave', () => {
-            document.querySelector('.modal-search').style.display = 'none';
-        });
+        // document.querySelector('.second-row__search-wrapper').addEventListener('mouseenter', () => {
+        //     document.querySelector('.modal-search').style.display = 'block';
+        // });
+        // document.querySelector('.modal-search').addEventListener('mouseleave', () => {
+        //     document.querySelector('.modal-search').style.display = 'none';
+        // });
 
-        document.querySelector('.first-row__city-select').addEventListener('mouseenter', () => {
-            document.querySelector('.modal-city').style.display = 'flex';
-        });
-        document.querySelector('.modal-city').addEventListener('mouseleave', () => {
-            document.querySelector('.modal-city').style.display = 'none';
-        });
+        // document.querySelector('.first-row__city-select').addEventListener('mouseenter', () => {
+        //     document.querySelector('.modal-city').style.display = 'flex';
+        // });
+        // document.querySelector('.modal-city').addEventListener('mouseleave', () => {
+        //     document.querySelector('.modal-city').style.display = 'none';
+        // });
     </script>
 </body>
 
