Добавляет мобилку страниц корзины и прочих

--- a/src/pages/basket.html
+++ b/src/pages/basket.html
@@ -302,7 +302,7 @@
                             <a href="product.html" class="basket__name">
                                 БИО крем для рук освежающий с лимонной мятой Alpine Organics 50 мл
                             </a>
-                            <div class="products__count">
+                            <div class="products__count products__count--basket">
                                 <input class="products-count__input" type="number" name="product-count"
                                     id="product-count" value="1" min="1">
                                 <div class="products-count__btns">
@@ -313,6 +313,9 @@
                                         <span class="visually-hidden">Уменьшить количество товара на 1.</span>
                                     </button>
                                 </div>
+                                <span class="basket__price--mob">
+                                    1 939 ₽
+                                </span>
                             </div>
                             <div class="basket__price-wrapper">
                                 <span class="basket__price">
@@ -328,7 +331,7 @@
                             <a href="product.html" class="basket__name">
                                 БИО крем для рук освежающий с лимонной мятой Alpine Organics 50 мл
                             </a>
-                            <div class="products__count">
+                            <div class="products__count products__count--basket">
                                 <input class="products-count__input" type="number" name="product-count"
                                     id="product-count" value="1" min="1">
                                 <div class="products-count__btns">
@@ -339,6 +342,9 @@
                                         <span class="visually-hidden">Уменьшить количество товара на 1.</span>
                                     </button>
                                 </div>
+                                <span class="basket__price--mob">
+                                    1 939 ₽
+                                </span>
                             </div>
                             <div class="basket__price-wrapper">
                                 <span class="basket__price">
