Добавляет мобилку контакты

--- a/src/pages/company.html
+++ b/src/pages/company.html
@@ -350,7 +350,7 @@
                 </span>
                 <div class="about-us-slider__content">
                     <div class="about-us-slider__item">
-                        <div class="about-us-slider__decorative about-us-slider__decorative--director">
+                        <div class="about-us-slider__decorative">
                             <img class="about-us__director-img" src="./assets/img/about-us/director.webp"
                                 alt="Основатель компании." width="317" height="424px">
                         </div>
